fix: add styles for dark mode

--- a/src/styles/app.pcss
+++ b/src/styles/app.pcss
@@ -143,7 +143,15 @@ div[data-reach-menu-popover] {
   @apply bg-white rounded shadow grid relative;
 }
 
+.editor-dark {
+  @apply bg-black rounded shadow grid relative;
+}
+
 .editor > .h-full-within {
+  height: calc(100% - 2rem);
+}
+
+.editor-dark > .h-full-within {
   height: calc(100% - 2rem);
 }
 
